small refactoring. Added fields for final dataframe output

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -7,6 +7,12 @@ log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}{UTC} %-5p %c{1}:%L - %m%n
 
+# Redirect log messages to console
+log4j.appender.TimestampAppender=org.apache.log4j.FileAppender
+log4j.appender.TimestampAppender.File=/home/npodevkit/zeppelin_0.7.3/share/FUZZ-OGRAPHY/processing.log
+log4j.appender.TimestampAppender.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.TimestampAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}{UTC} %-5p %c{1}:%L - %m%n
+
 log4j.logger.org.apache.spark=WARN
 # Set the default spark-shell log level to WARN. When running the spark-shell, the
 # log level for this class is used to overwrite the root logger's log level, so that
@@ -26,8 +32,3 @@ log4j.logger.org.apache.hadoop.hive.ql.exec.FunctionRegistry=ERROR
 # Parquet related logging
 log4j.logger.org.apache.parquet.CorruptStatistics=ERROR
 log4j.logger.parquet.CorruptStatistics=ERROR
-
-log4j.appender.TimestampAppender=org.apache.log4j.FileAppender
-log4j.appender.TimestampAppender.File=/home/npodevkit/zeppelin_0.7.3/share/FUZZ-OGRAPHY/processing.log
-log4j.appender.TimestampAppender.layout=org.apache.log4j.EnhancedPatternLayout
-log4j.appender.TimestampAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}{UTC} %-5p %c{1}:%L - %m%n
