Fixed final output Organized caching Removed debug dataframe logging

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -7,7 +7,7 @@ log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}{UTC} %-5p %c{1}:%L - %m%n
 
-# Redirect log messages to console
+# Redirect log messages to file
 log4j.appender.TimestampAppender=org.apache.log4j.FileAppender
 log4j.appender.TimestampAppender.File=/home/npodevkit/zeppelin_0.7.3/share/FUZZ-OGRAPHY/processing.log
 log4j.appender.TimestampAppender.layout=org.apache.log4j.EnhancedPatternLayout
