--- a/src/test/resources/configuration/test-configuration.conf
+++ b/src/test/resources/configuration/test-configuration.conf
@@ -1,16 +1,20 @@
 input-files {
-  base-path = "/home/npodevkit/zeppelin_0.7.3/share/FUZZ-OGRAPHY/Fuzzography.zip/"
+  base-path = "/home/npodevkit/FUZZ-OGRAPHY/Fuzzography.zip/"
   input-cities = "Fuzz-ography Input Data.txt"
 }
 
 geo-data {
-  base-path = "/home/npodevkit/zeppelin_0.7.3/share/FUZZ-OGRAPHY/GEODATASOURCE-CITIES-FREE.TXT/"
+  base-path = "/home/npodevkit/FUZZ-OGRAPHY/GEODATASOURCE-CITIES-FREE.TXT/"
   geo-cities = "GEODATASOURCE-CITIES-FREE.TXT"
 }
 
 processing {
-  logfile-prefix = "/home/npodevkit/zeppelin_0.7.3/share/FUZZ-OGRAPHY/processor"
+  logfile-prefix = "/home/npodevkit/FUZZ-OGRAPHY/processor"
   logfile-suffix = ".log"
   logging-properties = "logging.properties"
-  show-dataframe-sample = true //only during debugging
+  show-dataframe-sample = false //true only for debug
+}
+
+output {
+  path = "/home/npodevkit/FUZZ-OGRAPHY/processed"
 }
